[project]
name = "heathcliff"
version = "0.1.0"
description = "Pull features from ArcGIS Feature Servers"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Hayden Welch", email = "hcw360@gmail.com" },
]
dependencies = [
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]